force-app/main/default/objects/RTL_Channel_Referral__c/RTL_Channel_Referral__c.object-meta.xml
<CustomObject>
    <label>Channel Referral</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Channel  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>