force-app/main/default/objects/RTL_Channel_Referral__c/fields/RTL_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch / Team Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>