force-app/main/default/objects/RTL_Channel_Referral__c/fields/RTL_First_Entry__c.field-meta.xml
<CustomField>
    <fullName>RTL_First_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a flag to indicate that the channel referral is created during opportunity creation. For reporting purpose.</description>
    <label>First Entry</label>
    <type>Checkbox</type>
</CustomField>