force-app/main/default/objects/RTL_Channel_Referral__c/fields/RTL_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>RTL_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referral History</relationshipLabel>
    <relationshipName>Channel_Referrals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>