force-app/main/default/objects/RTL_Channel_Referral__c/fields/RTL_Turn_around_time__c.field-meta.xml
<CustomField>
    <fullName>RTL_Turn_around_time__c</fullName>
    <formula>IF(ISBLANK(DATEVALUE(RTL_End_Date__c)),
      TODAY()-DATEVALUE(RTL_Start_Date__c),
      DATEVALUE(RTL_End_Date__c)-DATEVALUE(RTL_Start_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn around time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>